--- a/FranksDinerBlazor/Client/wwwroot/index.html
+++ b/FranksDinerBlazor/Client/wwwroot/index.html
@@ -10,9 +10,21 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="FranksDinerBlazor.Client.styles.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="465822313879-7ik14gipurevgv4sn0hk0674vsksg9l7.apps.googleusercontent.com">
 </head>
 
 <body>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
+    <script>
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+    </script>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
